🏗️ Complete repository structure refactor
- Organized docs/ into guides/, features/, technical/, and archive/
- Categorized plans/ into active/, completed/, and archive/
- Moved all logos to public/assets/logos/
- Created scripts/ directory for utility scripts
- Moved root files to appropriate locations
- Updated .gitignore to hide backups/
- Created comprehensive documentation index (docs/README.md)
- Added scripts documentation (scripts/README.md)
- Updated main README.md with new project structure

Repository now has clean, scalable organization for future development.

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,11 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Backups
+.backups/
+backups/
+
+# Local testing scripts output
+scripts/output/
+scripts/temp/
